moving cooldown from events to triggered spells